# pregime

./: README.md  app.py  pyproject.toml  twilio_api.py
frontend/: article.html  desc.html  emergency.html  home.html  login.html  nav.html  profile.html  register.html  result.html
frontend/assets/css/: emergency.css  home.css  styles.css
static/: base.css  home.css  location.js  login.css  register.css
templates/: base.html  blog.html  desc.html  emergency.html  home.html  login.html  register.html  search.html  test.html
utils/: date.py  tools.py
