[tool.poetry]
name = "repl_nix_pregime"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-JWT-Extended = "^4.4.4"
pymongo = "^4.3.3"
twilio = "^7.16.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
